note about peer work

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="card-body">
               <h5 class="card-title">Type of Instruction</h5>
               <p class="card-text">
-                Are you being told where and when to work, what tools to use, or where to get supplies or services? Do you have "core business hours" or have to be in their office? Are you being asked to be "on call"?</em>
+                Are you being told where and when to work, what tools to use, or where to get supplies or services? Do you have "core business hours" or have to be in their office? Are you being asked to be "on call"? Do you do the same work as your peers?</em>
               </p>
             </div>
           </div>
